<resources>
    <string name="app_name">BlackJackApp</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="standString">Stand</string>
    <string name="hitString">Hit</string>
    <string name="splitString">Split</string>
    <string name="doubleString">Double</string>
    <string name="leftHandedString">Left-Handed</string>
    <string name="leftHandedSet">leftHandedSet</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="bust">BUST</string>
    <string name="winner">WINNER</string>
    <string name="hint">Hint</string>
</resources>